# techeurope_hackathon_2025_paris

./: .gitignore  =1.2.0  README.md  initial.py  mathstral_model.py  requirements.txt  utils.py
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/chat/: lesson_explainer.py  math_verification_pipeline.py  mathstral_model.py  router.py  schemas.py  verificator.py
backend/app/chat/ode/: codestral_verifier.py  mathstral_solver.py  ode_pipeline.py
backend/app/mathstral/: model.py  router.py
backend/app/models/: dual_model_mistrial.py  main.py
backend/app/support/: router.py  schema.py
backend/app/support/models/: mistral_ocr.py  video_recommend.py  viedo_recommend.py
backend/data-processing/: proofwiki_processor.ipynb  weaviate_client.py
frontend/: bun.lockb  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/example/: page.tsx
frontend/src/components/: AiThinkingStream.tsx  ChatCards.tsx  ChatMessage.tsx  LandingContent.tsx  app-sidebar.tsx  chat.tsx  dummyform.tsx  nav-main.tsx  nav-user.tsx  neon-isometric-maze.tsx
frontend/src/lib/: api.ts  apiTypes.ts  types.ts
models/: code_gen_solver.py  mathstral_math.py
models /: run_inference.py
solvers/: ode_solver.py
