
[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "sqlmodel==0.0.22",
    "docker==7.1.0",
    "python-multipart==0.0.20",
    "ruff==0.8.3",
    "langchain==0.3.17",
    "langchain-openai==0.3.3",
    "beanie==1.29.0",
    "langgraph==0.3.8",
    "accelerate==1.7.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.7.2",
    "antlr4-tools==0.2.2",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "bitsandbytes==0.45.5",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cloudpickle==3.1.1",
    "cryptography==45.0.2",
    "docstring_parser==0.16",
    "einops==0.8.1",
    "eval_type_backport==0.2.2",
    "filelock==3.18.0",
    "fire==0.7.0",
    "fsspec==2025.5.0",
    "h11==0.16.0",
    "hf-xet==1.1.2",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.0",
    "idna==3.10",
    "install-jdk==1.1.0",
    "Jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "latex2sympy2==1.9.1",
    "MarkupSafe==3.0.2",
    "mistral_common==1.5.6",
    "mistral_inference==1.6.0",
    "mistralai==1.7.1",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "networkx==3.4.2",
    "ninja==1.11.1.4",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-ml-py==12.575.51",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "packaging==25.0",
    "paramiko==3.5.1",
    "pillow==11.2.1",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "PyNaCl==1.5.0",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.25.1",
    "safetensors==0.5.3",
    "scipy==1.15.3",
    "sentencepiece==0.2.0",
    "simple-parsing==0.1.7",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "termcolor==3.1.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.52.3",
    "triton==3.3.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "xformers==0.0.30",
]
